--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "EditorConfig.EditorConfig",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "clinyong.vscode-css-modules"
+    "clinyong.vscode-css-modules",
+    "formulahendry.auto-rename-tag"
   ]
 }
